# deerhacks_2022

./: .gitignore  README.md  main.py  pyproject.toml
src/: commands.py  differentiate.py  history.py  main.py  out.py  parse.py  parse_differentiate.py  parse_simplify.py  parse_solve.py  parse_summation.py  parse_sympy_expr.py  parse_where_clause.py  simplify.py  solve.py  state.py  summation.py
